<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alexiscruz.soccerteamapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Players"
        android:textSize="18sp"
        android:id="@+id/tx" />

    <CheckBox
        android:text="@string/albert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp"
        android:id="@+id/albert_cb"
        android:onClick="addPlayer" />

    <CheckBox
        android:text="@string/alex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/alex_cb"
        android:layout_below="@+id/albert_cb"
        android:onClick="addPlayer" />
    <CheckBox
        android:text="@string/angel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/angel_cb"
        android:layout_below="@+id/alex_cb"
        android:onClick="addPlayer" />

    <CheckBox
        android:text="@string/chris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/angel_cb"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/chris_cb"
        android:onClick="addPlayer" />

    <CheckBox
        android:text="@string/david"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chris_cb"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/david_cb"
        android:onClick="addPlayer" />

    <CheckBox
        android:text="@string/downy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/albert_cb"
        android:layout_toRightOf="@+id/albert_cb"
        android:layout_toEndOf="@+id/albert_cb"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:id="@+id/downy_cb"
        android:onClick="addPlayer" />

    <CheckBox
        android:text="@string/edward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/downy_cb"
        android:layout_alignLeft="@+id/downy_cb"
        android:layout_alignStart="@+id/downy_cb"
        android:id="@+id/edward_cb"
        android:onClick="addPlayer" />

    <CheckBox
        android:text="@string/erik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edward_cb"
        android:layout_alignLeft="@+id/edward_cb"
        android:layout_alignStart="@+id/edward_cb"
        android:id="@+id/erik_cb"
        android:onClick="addPlayer" />

    <CheckBox
        android:text="@string/gabby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/erik_cb"
        android:layout_alignLeft="@+id/erik_cb"
        android:layout_alignStart="@+id/erik_cb"
        android:id="@+id/gabby_cb"
        android:onClick="addPlayer" />

    <CheckBox
        android:text="@string/jesus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gabby_cb"
        android:layout_alignRight="@+id/gabby_cb"
        android:layout_alignEnd="@+id/gabby_cb"
        android:id="@+id/jesus_cb"
        android:onClick="addPlayer" />

    <CheckBox
        android:text="@string/jose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edward_cb"
        android:layout_toRightOf="@+id/edward_cb"
        android:layout_toEndOf="@+id/edward_cb"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:id="@+id/jose_cb"
        android:onClick="addPlayer" />

    <CheckBox
        android:text="@string/omar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edward_cb"
        android:layout_alignLeft="@+id/jose_cb"
        android:layout_alignStart="@+id/jose_cb"
        android:id="@+id/omar_cb"
        android:onClick="addPlayer" />

    <CheckBox
        android:text="@string/raul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gabby_cb"
        android:layout_alignRight="@+id/omar_cb"
        android:layout_alignEnd="@+id/omar_cb"
        android:id="@+id/raul_cb"
        android:onClick="addPlayer" />

    <CheckBox
        android:text="@string/rodi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/raul_cb"
        android:layout_alignRight="@+id/raul_cb"
        android:layout_alignEnd="@+id/raul_cb"
        android:id="@+id/rodi_cb"
        android:onClick="addPlayer" />

    <CheckBox
        android:text="@string/roy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/jesus_cb"
        android:layout_alignRight="@+id/rodi_cb"
        android:layout_alignEnd="@+id/rodi_cb"
        android:id="@+id/roy_cb"
        android:onClick="addPlayer" />

    <CheckBox
        android:text="@string/skips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/roy_cb"
        android:layout_alignLeft="@+id/roy_cb"
        android:layout_alignStart="@+id/roy_cb"
        android:id="@+id/skips_cb"
        android:onClick="addPlayer" />

    <Button
        android:text="@string/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skips_cb"
        android:layout_toLeftOf="@+id/raul_cb"
        android:layout_toStartOf="@+id/raul_cb"
        android:layout_marginTop="91dp"
        android:id="@+id/submit_btn"
        android:onClick="submitPlayer" />
</RelativeLayout>
